--- a/app/src/main/res/layout/activity_customize_your_date_activiy.xml
+++ b/app/src/main/res/layout/activity_customize_your_date_activiy.xml
@@ -7,18 +7,20 @@
 
     <GridLayout
         android:id="@+id/gridLayout"
-        android:layout_width="364dp"
-        android:layout_height="461dp"
+        android:layout_width="358dp"
+        android:layout_height="468dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:alignmentMode="alignBounds"
         android:columnCount="2"
         android:columnOrderPreserved="false"
         android:useDefaultMargins="true"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.489"
+        app:layout_constraintHorizontal_bias="0.476"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.266">
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="1.0">
 
         <TextView
             android:id="@+id/textView6"
@@ -30,7 +32,9 @@
             android:fontFamily="serif"
             android:gravity="center"
 
+            android:paddingEnd="50dp"
             android:text="Relationship Stage"
+            android:textColor="@android:color/black"
             android:textSize="18sp" />
 
         <TextView
@@ -43,6 +47,7 @@
             android:fontFamily="serif"
             android:gravity="center"
             android:text="Resturant Preferance"
+            android:textColor="@android:color/black"
             android:textSize="18sp" />
 
         <TextView
@@ -55,6 +60,7 @@
             android:layout_margin="10dp"
             android:fontFamily="serif"
             android:text="Budget"
+            android:textColor="@android:color/black"
             android:textSize="18sp" />
 
         <TextView
@@ -68,6 +74,7 @@
 
             android:gravity="center"
             android:text="Special Occations?"
+            android:textColor="@android:color/black"
             android:textSize="18sp" />
 
         <Spinner
@@ -170,13 +177,29 @@
 
     <Button
         android:id="@+id/button"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:layout_marginBottom="88dp"
+        android:background="#DBCDCD"
+        android:text="Filter"
+        android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:text="Describe Your Date:"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
