--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -38,32 +38,41 @@
 
     <Button
         android:id="@+id/btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="52dp"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:layout_width="208dp"
+        android:layout_height="42dp"
+        android:layout_marginBottom="44dp"
+        android:background="@android:color/white"
         android:text="Find Resturant"
+        android:textColor="@android:color/black"
         app:layout_constraintBottom_toTopOf="@+id/customizeDate"
         app:layout_constraintEnd_toEndOf="@+id/customizeDate" />
 
     <Button
         android:id="@+id/customizeDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:layout_width="208dp"
+        android:layout_height="42dp"
         android:layout_marginBottom="44dp"
+        android:background="@android:color/white"
         android:text="Customize Your Date"
+        android:textColor="@android:color/black"
         app:layout_constraintBottom_toTopOf="@+id/MakeAMemory"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/MakeAMemory"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="104dp"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:layout_width="208dp"
+        android:layout_height="42dp"
+        android:layout_marginBottom="136dp"
+        android:background="@android:color/white"
         android:text="Make a Memory"
+        android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
